--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,11 +29,11 @@
     
     <div id="landing-header">
  		
- 		<header class='jumbotron'> 		
+ 		<header id="jumbo" class='jumbotron'> 		
 			
-			<h1> Welcome to South Park </h1>
+			<h1 id="welcome"> Welcome to South Park </h1>
 			</header>
-		<a class = 'btn btn-primary btn-large' href='/southpark'> Meet some friends of mine </a>
+		<a class = 'btn btn-primary btn-lg' href='/southpark'> Meet some friends of mine </a>
     </div>
     
     <ul class="slideshow">
