commented unfinished index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,14 +9,14 @@
         
     </head>
     <body>
-    <header>
+    <!-- <header>
         <h2>wacKY's South Park</h2>
         <nav>
             <li><a href="">Tours</a></li>        
             <li><a href="">Contact</a></li>
             <li><a href="">About</a></li>    
         </nav>
-    </header>
+    </header> -->
 
 
 
