changed second landing image

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -114,7 +114,7 @@ body {
   animation-delay:0s;
 }
 .slideshow li:nth-child(2) { 
-  background-image: url(http://www.4usky.com/data/out/86/164774945-south-park-wallpapers.jpg);
+  background-image: url(https://images.alphacoders.com/590/thumb-1920-590805.png);
   animation-delay: 10s; 
 }
 .slideshow li:nth-child(3) { 
